@@ -101,11 +101,14 @@
                       </h2>
                     </div>
 
-                    <tal:block tal:define="show_theme_title python:True"
-                               tal:repeat="item view/next_meetings">
-                      <tal:block metal:use-macro="context/@@items/macros/hearing">
-                      </tal:block>
-                    </tal:block>           
+                    <div tal:condition="context/getText">
+                        <article class="article-next-meeting">
+                            <header><h3>
+                                <i class="fa fa-gavel"></i>Volgende raadzitting
+                            </h3></header>
+                            <div class="body" tal:content="structure context/getText"></div>
+                        </article>
+                    </div>
 
                     <tal:block tal:define="show_theme_title python:True"
                                tal:repeat="item view/future_events">
@@ -179,20 +182,3 @@
     </metal:block>
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
